@@ -1,5 +1,6 @@
 * 2013-07-24 - tobias.friedrich@open-xchange.com
 
+ - Fix for bug 27747: Bypass com.openexchange.servlet.maxBodySize when uploading / downloading files via drive servlet  
  - Fix for bug 24534: Added import/export of distribution lists in csv-file  
 
 * 2013-07-24 - martin.herfurth@open-xchange.com
